# IAAA

./: .gitignore  DATASET_DECISION_NYC_FIRST.md  DEEPSEEK_CONTEXT_CACHE_NOTES.md  DEEPSEEK_USER_EVAL_RESULTS.md  IAA-Agent需求文档.md  IAA_AGENT_NYC_FIRST_IMPLEMENTATION_PLAN.md  README.md  TRACE_ANNOTATION_USER_349_SESSION_349_67.md  pyproject.toml
cases/: case_a.json  case_b.json  case_c.json  case_d.json
iaa_agent/: __init__.py  cli.py  data.py  engine.py  evaluation.py  llm.py  models.py  utils.py
tests/: test_core.py
